--- a/assets/style.css
+++ b/assets/style.css
@@ -90,7 +90,7 @@ header {
     justify-content: center;
     flex-flow: column;
     text-align: center;
-    background-image: url(/gambar/hand.jpg);
+    background-image: url(https://human-errorr.github.io/website/gambar/hand.jpg);
     background-size: 700%;
 }
 
