--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ header {
     justify-content: center;
     flex-flow: column;
     text-align: center;
-    background-image: url(/gambar/hand.jpg);
+    background-image: url(https://fajrcode.github.io/web-portofolio/gambar/hand.jpg);
     background-size: 700%;
 }
 
